optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_props_wrapping.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from '@qwik.dev/core';
export const Works = component$(({fromProps}) => {
	let fromLocal = useSignal(0);
	return (
		<div
			computed={fromLocal + fromProps}
			local={fromLocal}
			props-wrap={fromProps}
			props-only={{props: fromProps}}
			props={{props: fromProps, local: fromLocal}}
				>
		</div>
	);
});

============================= example_props_wrapping.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_Works_component_tFNdEEHYwLw = () => import("./example_props_wrapping.tsx_Works_component_tFNdEEHYwLw.js");
export const Works = componentQrl(qrl(i_Works_component_tFNdEEHYwLw, "Works_component_tFNdEEHYwLw"));


None
============================= ./example_props_wrapping.tsx_Works_component_tFNdEEHYwLw.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
export const Works_component_tFNdEEHYwLw = ({ fromProps }) => {
	let fromLocal = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", {
		computed: fromLocal + fromProps,
		local: fromLocal,
		props-wrap: _wrapProp(_rawProps, "fromProps"),
		props-only: { props: fromProps },
		props: {
			props: fromProps,
			local: fromLocal
		}
	}, null, null, 3, null);
};


None
/*
{
  "origin": "example_props_wrapping.tsx",
  "name": "Works_component_tFNdEEHYwLw",
  "entry": "entry_segments",
  "displayName": "example_props_wrapping.tsx_Works_component",
  "hash": "tFNdEEHYwLw",
  "canonicalFilename": "example_props_wrapping.tsx_Works_component_tFNdEEHYwLw",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Works_component_tFNdEEHYwLw",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
