optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_props_wrapping2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from '@qwik.dev/core';
export const Works = component$((props: { fromProps: number }) => {
	let fromLocal = useSignal(0);
	return (
		<div
			computed={fromLocal + props.fromProps}
			local={fromLocal}
			props-wrap={props.fromProps}
			props-only={{props: props.fromProps}}
			props={{props: props.fromProps, local: fromLocal}}
				>
		</div>
	);
});

============================= ./example_props_wrapping2.tsx_Works_component_KaometRFDW8.js (ENTRY POINT)==

import { _jsxSorted, useSignal } from "@qwik.dev/core";
export const Works_component_KaometRFDW8 = (props) => {
	let fromLocal = useSignal(0);
	return /*#__PURE__*/ _jsxSorted("div", {
		computed: fromLocal + props.fromProps,
		local: fromLocal,
		props-wrap: props.fromProps,
		props-only: { props: props.fromProps },
		props: {
			props: props.fromProps,
			local: fromLocal
		}
	}, null, null, 3, null);
};


None
/*
{
  "origin": "example_props_wrapping2.tsx",
  "name": "Works_component_KaometRFDW8",
  "entry": "entry_segments",
  "displayName": "example_props_wrapping2.tsx_Works_component",
  "hash": "KaometRFDW8",
  "canonicalFilename": "example_props_wrapping2.tsx_Works_component_KaometRFDW8",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Works_component_KaometRFDW8",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= example_props_wrapping2.tsx ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_Works_component_KaometRFDW8 = () => import("./example_props_wrapping2.tsx_Works_component_KaometRFDW8.js");
export const Works = componentQrl(qrl(i_Works_component_KaometRFDW8, "Works_component_KaometRFDW8"));


None
== DIAGNOSTICS ==

[]
