optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_props_wrapping_children2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal } from '@qwik.dev/core';
export const Works = component$((props) => {
	let fromLocal = useSignal(0);
	return (
		<div>
		  before-
			{fromLocal}
			{props.fromProps}
			{fromLocal + props.fromProps}
			{{props: props.fromProps}}
			{{local: fromLocal}}
			{{props: props.fromProps, local: fromLocal}}
			-after
		</div>
	);
});

============================= example_props_wrapping_children2.tsx ==

import{componentQrl,qrl}from"@qwik.dev/core";export const Works=componentQrl(qrl(()=>import(`./example_props_wrapping_children2.tsx_Works_component_X6FZK0kqFbo.js`),`Works_component_X6FZK0kqFbo`));

None
============================= ./example_props_wrapping_children2.tsx_Works_component_X6FZK0kqFbo.js (ENTRY POINT)==

import{_jsxSorted,useSignal}from"@qwik.dev/core";export const Works_component_X6FZK0kqFbo=props=>{let fromLocal=useSignal(0);return/* @__PURE__ */ _jsxSorted(`div`,null,null,[`before-`,fromLocal,props.fromProps,fromLocal+props.fromProps,{props:props.fromProps},{local:fromLocal},{props:props.fromProps,local:fromLocal},`-after`],1,null)};

None
/*
{
  "origin": "example_props_wrapping_children2.tsx",
  "name": "Works_component_X6FZK0kqFbo",
  "entry": "entry_segments",
  "displayName": "example_props_wrapping_children2.tsx_Works_component",
  "hash": "X6FZK0kqFbo",
  "canonicalFilename": "example_props_wrapping_children2.tsx_Works_component_X6FZK0kqFbo",
  "path": ".",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "Works_component_X6FZK0kqFbo",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
