optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_qwik_conflict.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStyles } from '@qwik.dev/core';
import { qrl } from '@qwik.dev/core/what';

export const hW = 12;
export const handleWatch = 42;

const componentQrl = () => console.log('not this', qrl());

componentQrl();
export const Foo = component$(() => {
	useStyles$('thing');
	const qwik = hW + handleWatch;
	console.log(qwik);
	const qrl = 23;
	return (
		<div onClick$={()=> console.log(qrl)}/>
	)
}, {
	tagName: "my-foo",
});

export const Root = component$(() => {
	useStyles($('thing'));
	return $(() => {
		return (
			<div/>
		)
	});
}, {
	tagName: "my-foo",
});

============================= test.tsx_test_Root_component_useStyles_0SnjuFgYQwM.js (ENTRY POINT)==

export const test_Root_component_useStyles_0SnjuFgYQwM = "thing";


None
/*
{
  "origin": "test.tsx",
  "name": "test_Root_component_useStyles_0SnjuFgYQwM",
  "entry": null,
  "displayName": "test_Root_component_useStyles",
  "hash": "0SnjuFgYQwM",
  "canonicalFilename": "test.tsx_test_Root_component_useStyles_0SnjuFgYQwM",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    499,
    506
  ]
}
*/
============================= test.tsx_test_Root_component_1_4LcUydpMwDo.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
export const test_Root_component_1_4LcUydpMwDo = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_Root_component_1_4LcUydpMwDo",
  "entry": null,
  "displayName": "test_Root_component_1",
  "hash": "4LcUydpMwDo",
  "canonicalFilename": "test.tsx_test_Root_component_1_4LcUydpMwDo",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false,
  "loc": [
    520,
    555
  ]
}
*/
============================= test.tsx_test_Root_component_Fdi7ywWnD40.js (ENTRY POINT)==

import { qrl, useStyles } from "@qwik.dev/core";
const i_0SnjuFgYQwM = ()=>import("./test.tsx_test_Root_component_useStyles_0SnjuFgYQwM");
export const test_Root_component_Fdi7ywWnD40 = ()=>{
	useStyles(/*#__PURE__*/ qrl(i_0SnjuFgYQwM, "test_Root_component_useStyles_0SnjuFgYQwM"));
	return /*#__PURE__*/ qrl(i_4LcUydpMwDo, "test_Root_component_1_4LcUydpMwDo");
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_Root_component_Fdi7ywWnD40",
  "entry": null,
  "displayName": "test_Root_component",
  "hash": "Fdi7ywWnD40",
  "canonicalFilename": "test.tsx_test_Root_component_Fdi7ywWnD40",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    478,
    559
  ]
}
*/
============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core/what";
const i_pnb0KSS7tbU = ()=>import("./test.tsx_test_Foo_component_useStyles_pnb0KSS7tbU");
const i_NK5Hyit5tec = ()=>import("./test.tsx_test_Foo_component_NK5Hyit5tec");
const i_0SnjuFgYQwM = ()=>import("./test.tsx_test_Root_component_useStyles_0SnjuFgYQwM");
const i_4LcUydpMwDo = ()=>import("./test.tsx_test_Root_component_1_4LcUydpMwDo");
const i_Fdi7ywWnD40 = ()=>import("./test.tsx_test_Root_component_Fdi7ywWnD40");
export const hW = 12;
export const handleWatch = 42;
const componentQrl = ()=>console.log("not this", qrl());
componentQrl();
export const Foo = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_NK5Hyit5tec, "test_Foo_component_NK5Hyit5tec"));
export const Root = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_Fdi7ywWnD40, "test_Root_component_Fdi7ywWnD40"));


None
============================= test.tsx_test_Foo_component_useStyles_pnb0KSS7tbU.js (ENTRY POINT)==

export const test_Foo_component_useStyles_pnb0KSS7tbU = "thing";


None
/*
{
  "origin": "test.tsx",
  "name": "test_Foo_component_useStyles_pnb0KSS7tbU",
  "entry": null,
  "displayName": "test_Foo_component_useStyles",
  "hash": "pnb0KSS7tbU",
  "canonicalFilename": "test.tsx_test_Foo_component_useStyles_pnb0KSS7tbU",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    283,
    290
  ]
}
*/
============================= test.tsx_test_Foo_component_NK5Hyit5tec.js (ENTRY POINT)==

import { _jsxSorted, useStylesQrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
const i_pnb0KSS7tbU = ()=>import("./test.tsx_test_Foo_component_useStyles_pnb0KSS7tbU");
export const test_Foo_component_NK5Hyit5tec = ()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_pnb0KSS7tbU, "test_Foo_component_useStyles_pnb0KSS7tbU"));
	const qwik = /*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_pnb0KSS7tbU, "test_Foo_component_useStyles_pnb0KSS7tbU"));
	console.log(qwik);
	const qrl = 23;
	return /*#__PURE__*/ _jsxSorted("div", { on:click: /*#__PURE__*/ qrl(i_onClick, "Foo_component_div_onClick", [qrl]) }, null, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test_Foo_component_NK5Hyit5tec",
  "entry": null,
  "displayName": "test_Foo_component",
  "hash": "NK5Hyit5tec",
  "canonicalFilename": "test.tsx_test_Foo_component_NK5Hyit5tec",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    263,
    418
  ]
}
*/
== DIAGNOSTICS ==

[]
