optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_reg_ctx_name_segments_hoisted.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---


import { $, component$, server$, useStyle$ } from '@qwik.dev/core';

export const Works = component$((props) => {
	useStyle$(STYLES);
	const text = 'hola';
	return (
		<div onClick$={server$(() => console.log('in server', text))}></div>
	);
});

const STYLES = '.class {}';

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { useStyleQrl } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { serverQrl } from "@qwik.dev/core";
import { _regSymbol } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const Works_component_div_on_click_server_I0KQOua02KE = /*#__PURE__*/ _regSymbol(()=>console.log('in server', 'hola'), "I0KQOua02KE");
const Works_component_t45qL4vNGv0 = (props)=>{
    useStyleQrl(/*#__PURE__*/ inlinedQrl(STYLES, "Works_component_useStyle_i40UL9JyQpg"));
    return /*#__PURE__*/ _jsxSorted("div", {
        "on:click": serverQrl(/*#__PURE__*/ inlinedQrl(Works_component_div_on_click_server_I0KQOua02KE, "Works_component_div_on_click_server_I0KQOua02KE"))
    }, null, null, 2, "u6_0");
};
export const Works = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(Works_component_t45qL4vNGv0, "Works_component_t45qL4vNGv0"));
const STYLES = '.class {}';
export { STYLES as _auto_STYLES };


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;iFAOyB,IAAM,QAAQ,GAAG,CAAC,aAF7B;oCAFkB,CAAC;IAChC,qCAAU;IAEV,qBACC,WAAC;QAAI,YAAU;;AAEjB;AANA,OAAO,MAAM,sBAAQ,mGAMlB;AAEH,MAAM,SAAS\"}")
== DIAGNOSTICS ==

[]
