optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_renamed_exports.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ as Component, $ as onRender, useStore } from '@qwik.dev/core';

export const App = Component((props) => {
	const state = useStore({thing: 0});

	return onRender(() => (
		<div>{state.thing}</div>
	));
});

============================= test.js ==

import { _jsxSorted, useStore, Qrl as onRender, componentQrl as Component } from "@qwik.dev/core";
export const App = Component((props)=>{
	const state = useStore({ thing: 0 });
	return onRender(()=>/*#__PURE__*/ _jsxSorted("div", null, null, state.thing, 1, null));
});


None
== DIAGNOSTICS ==

[]
