optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_example_server_auth.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import GitHub from '@auth/core/providers/github'
import Facebook from 'next-auth/providers/facebook'
import Google from 'next-auth/providers/google'
import {serverAuth$, auth$} from '@auth/qwik';

export const { onRequest, logout, getSession, signup } = serverAuth$({
	providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: import.meta.env.FACEBOOK_ID,
		clientSecret: import.meta.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
	]
});

export const { onRequest, logout, getSession, signup } = auth$({
	providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: process.env.FACEBOOK_ID,
		clientSecret: process.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
	]
});

============================= test.js ==

import { authQrl, serverAuthQrl } from "@auth/qwik";
import { authQrl, qrl, serverAuthQrl } from "@qwik.dev/core";
const i_fOwC85dKyEY = ()=>import("./test.tsx_test_serverAuth_fOwC85dKyEY");
const i_bL3Fr0lPRI0 = ()=>import("./test.tsx_test_auth_bL3Fr0lPRI0");
export const { onRequest, logout, getSession, signup } = /*#__PURE__*/ serverAuthQrl(/*#__PURE__*/ qrl(i_fOwC85dKyEY, "test_serverAuth_fOwC85dKyEY"));
export const { onRequest, logout, getSession, signup } = /*#__PURE__*/ authQrl(/*#__PURE__*/ qrl(i_bL3Fr0lPRI0, "test_auth_bL3Fr0lPRI0"));


None
============================= test.tsx_test_serverAuth_fOwC85dKyEY.js (ENTRY POINT)==

import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
export const test_serverAuth_fOwC85dKyEY = { providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: import.meta.env.FACEBOOK_ID,
		clientSecret: import.meta.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] };


None
/*
{
  "origin": "test.tsx",
  "name": "test_serverAuth_fOwC85dKyEY",
  "entry": null,
  "displayName": "test_serverAuth",
  "hash": "fOwC85dKyEY",
  "canonicalFilename": "test.tsx_test_serverAuth_fOwC85dKyEY",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "serverAuth$",
  "captures": false,
  "loc": [
    266,
    575
  ]
}
*/
============================= test.tsx_test_auth_bL3Fr0lPRI0.js (ENTRY POINT)==

import GitHub from "@auth/core/providers/github";
import Facebook from "next-auth/providers/facebook";
import Google from "next-auth/providers/google";
export const test_auth_bL3Fr0lPRI0 = { providers: [
	GitHub({
		clientId: process.env.GITHUB_ID,
		clientSecret: process.env.GITHUB_SECRET
	}),
	Facebook({
		clientId: process.env.FACEBOOK_ID,
		clientSecret: process.env.FACEBOOK_SECRET
	}),
	Google({
		clientId: process.env.GOOGLE_ID,
		clientSecret: process.env.GOOGLE_SECRET
	})
] };


None
/*
{
  "origin": "test.tsx",
  "name": "test_auth_bL3Fr0lPRI0",
  "entry": null,
  "displayName": "test_auth",
  "hash": "bL3Fr0lPRI0",
  "canonicalFilename": "test.tsx_test_auth_bL3Fr0lPRI0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "auth$",
  "captures": false,
  "loc": [
    642,
    943
  ]
}
*/
== DIAGNOSTICS ==

[]
